--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -67,7 +67,9 @@
     }
 }
 
-.action {}
+.action {
+    position: relative;
+}
 
 .search,
 .cart,
@@ -104,8 +106,17 @@
     }
 }
 
-.user_info {}
-
-.user-name {}
-
-.user-date {}
+.quality {
+    align-items: center;
+    background-color: var(--primary);
+    border-radius: 45%;
+    color: #fff;
+    display: flex;
+    font-size: 1.2rem;
+    height: 20px;
+    justify-content: center;
+    position: absolute;
+    right: 70px;
+    top: 5px;
+    width: 25px;
+}
