--- a/src/layouts/components/Slider/Slider.module.scss
+++ b/src/layouts/components/Slider/Slider.module.scss
@@ -51,3 +51,34 @@
     height: 500px;
     pointer-events: none;
 }
+
+
+@keyframes border {
+    0% {
+        border-radius: 58% 42% 38% 62%/42% 55% 45% 58%;
+    }
+
+    50% {
+        border-radius: 31% 69% 59% 41%/28% 24% 76% 72%;
+    }
+
+    100% {
+        border-radius: 58% 42% 38% 62%/42% 55% 45% 58%;
+    }
+}
+
+.background {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    -webkit-transform: translateY(-50%);
+    width: 472px;
+    height: 472px;
+    animation: border 5s infinite;
+    -webkit-animation: border 5s infinite;
+    transform: translateY(-50%);
+    transition: border-radius 13s ease;
+    border-radius: 58% 42% 38% 62%/42% 55% 45% 58%;
+    background-color: var(--primary);
+    z-index: -1;
+}
