Sidebar, Cartlist, Login, Register, Update Header & Product

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,7 +5,10 @@
 :root {
     --primary: #4267b2;
     --white: #ffffff;
+    --black: #000000;
     --orange: #FF6600;
+    --google: #ff6868;
+    --facebook: #68bbff;
 
     --text-color: #333333;
 }
@@ -50,4 +53,14 @@ button {
     border: none;
     background-color: transparent;
     cursor: pointer;
+}
+
+input {
+    border: none;
+    outline: none;
+}
+
+.info_form {
+    margin-top: 16px;
+    padding: 13px;
 }
