--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -29,6 +29,11 @@
     }
 }
 
+.small {
+    font-size: 1.04rem;
+    padding: 10px 15px;
+}
+
 .large {
     font-size: 1.95rem;
     padding: 13px 26px;
@@ -49,4 +54,11 @@
 .icon+.title,
 .title+.icon {
     margin-left: 8px;
+}
+
+.social {
+    padding: 7px;
+    font-size: 1.3rem;
+    font-weight: 600;
+    border-radius: 8px;
 }
