--- a/src/features/auth/pages/auth.module.scss
+++ b/src/features/auth/pages/auth.module.scss
@@ -69,8 +69,11 @@
     border: 2px solid var(--facebook);
 }
 
+.name,
 .email,
-.password {
+.password,
+.c_password,
+.phone {
     display: flex;
     flex-direction: column;
 
@@ -93,13 +96,18 @@
 
 .btn_wrapper {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
+}
+
+.error_msg {
+    color: red;
 }
 
 .continue_btn {
     margin-top: 8px;
     text-align: left;
+
 }
 
 .footer {
