--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -106,11 +106,36 @@
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    height: 70px;
 
     img {
-        width: 60px;
+        width: 70px;
     }
 }
+
+.user_info {
+    width: 200px;
+}
+
+.username {
+    display: flex;
+    align-items: center;
+}
+
+.username_label {
+    font-weight: 600;
+    color: var(--primary);
+}
+
+.username_value_name {
+    margin-left: 38px;
+}
+
+.username_value_date {
+    margin-left: 15px;
+    font-size: 1.3rem;
+}
+
 
 .quality {
     align-items: center;
