--- a/src/features/auth/pages/auth.module.scss
+++ b/src/features/auth/pages/auth.module.scss
@@ -145,3 +145,36 @@
         }
     }
 }
+
+.overlay {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    opacity: .5;
+}
+
+.overlay_none {
+    display: block;
+}
+
+@keyframes spinning {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.overlay_icon {
+    position: absolute;
+    top: 48%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    font-size: 6rem;
+    color: var(--primary);
+    animation: spinning 1.2s linear infinite;
+}
