--- a/src/features/auth/pages/auth.module.scss
+++ b/src/features/auth/pages/auth.module.scss
@@ -146,19 +146,6 @@
     }
 }
 
-.overlay {
-    display: none;
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: #000;
-    opacity: .5;
-}
-
-.overlay_none {
-    display: block;
-}
-
 @keyframes spinning {
     0% {
         transform: rotate(0deg);
@@ -167,6 +154,11 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+.overlay_none {
+    display: block !important;
+    opacity: .8 !important;
 }
 
 .overlay_icon {
